--- a/frontend/ecom-frontend-5-main/ecom-frontend-5-main/package.json
+++ b/frontend/ecom-frontend-5-main/ecom-frontend-5-main/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.6.8",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "ecommerce": "file:",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
